--- a/rails/controllers_views/assignments/wall/Gemfile
+++ b/rails/controllers_views/assignments/wall/Gemfile
@@ -1,6 +1,8 @@
 source 'https://rubygems.org'
 
 
+gem 'rspec'
+gem 'rspec-rails'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.8'
 # Use sqlite3 as the database for Active Record
